--- a/WpfApp.DataProtocol/WpfApp.DataProtocol.csproj
+++ b/WpfApp.DataProtocol/WpfApp.DataProtocol.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net452</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+  </ItemGroup>
+
 </Project>
